fixing broken unicode on mobile

--- a/src/Layout/Navbar.module.css
+++ b/src/Layout/Navbar.module.css
@@ -83,6 +83,7 @@
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+  unicode-range: U+00-FF;
 }
 
 .navbarControl button {
